@@ -21,6 +21,8 @@ Enhancements:
 - string: add a HX_strndup function
 - string: add a HX_strnlen function
 - mc: use an implicit minimum allocated length
+Changes:
+- string: unline HX_strdup
 
 
 v3.11 (2011-07-25)
